@@ -2,49 +2,48 @@
 
 ### Linux/UNIX
 
-**staq** uses [CMake](https://cmake.org/) for its build system. To build both tool suite and the **staq** executable, execute under the root directory
+**staq** uses [CMake](https://cmake.org/) for its build system. To build both 
+tool suite and the **staq** executable, execute under the root directory
 
 ```bash
-mkdir build && cd build
-cmake ..
-make -j8
+cmake -B build
+cmake --build build --parallel 8
   ```
 
-To build only the **staq** tool suite, from the `build` directory, enter
-`make -j8 tools`. To build only the **staq** executable, type `make -j8 staq`
-Unit tests can be built with the command `make -j8 unit_tests`.
+To build only the **staq** tool suite, execute 
+`cmake --build build --target tools --parallel 8`. To build only the **staq** 
+executable, execute `cmake --build build --target staq --parallel 8`.
+Unit tests can be built with the command 
+`cmake --build build --target unit_tests --parallel 8`.
 
-To (un)install, type 
+To (un)install, execute 
 
 ```bash
-sudo make (un)install
+sudo cmake --build build --target (un)install
 ```
 
 ### Windows
 
 Building on Windows requires [Visual Studio](https://www.visualstudio.com) 2017
-or later for cmake support. In Visual Studio, open
+or later for CMake support. In Visual Studio, open
 [CMakeLists.txt](https://github.com/softwareQinc/staq/blob/main/CMakeLists.txt)
-as a cmake project, then simply build as a regular Visual Studio project or,
-from a Developer Command Prompt, execute under the root directory 
+as a CMake project, then simply build as a regular Visual Studio project or,
+from an Administrator Developer Command Prompt, execute under the root directory 
 
 ```
-mkdir build && cd build
-cmake .. 
-msbuild -m:8 -p:Configuration=Release staq.sln
+cmake -B build
+cmake --build build --parallel 8
 ```
 
-assuming you are building from an out of source directory. 
-
-To (un)install, type 
+To (un)install, execute 
 
 ```
-cmake --build . --target (UN)INSTALL
+cmake --build build --target (UN)INSTALL
 ```
 
 ## Python 3 wrapper
-[pystaq](https://github.com/softwareQinc/staq/blob/main/pystaq/) is a Python wrapper for staq.
-pystaq can be installed using `pip`:
+[pystaq](https://github.com/softwareQinc/staq/blob/main/pystaq/) is a Python 3 
+wrapper for **staq**. pystaq can be installed using `pip`
 ```
 pip install git+https://github.com/softwareQinc/staq
 ```
