@@ -1,5 +1,6 @@
 Pre-release
     - Migrated pystaq installation method to pyproject.toml
+    - CMake minimum required version bumped to 3.15
 
 Version 3.0.1 - 2 April 2023
     - This is a maintenance release with minor changes
